--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -176,6 +176,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="archive_does_move_done_tasks">Mou les tasques realitzades a un fitxer especificat de la mateixa carpeta</string>
     <string name="sort_tasks_by_selected_order">Ordena les tasques per l\'ordre seleccionat</string>
     <string name="special_key">Tecla especial</string>
+    <string name="asciidoc_special_key">Contingut AsciiDoc especial</string>
     <string name="key_page_up">Pàgina anterior (Page Up)</string>
     <string name="key_page_down">Pàgina següent (Page Down)</string>
     <string name="move_text_one_line_up">Mou el text una línia cap amunt</string>
