--- a/app/src/main/res/values-sq/strings.xml
+++ b/app/src/main/res/values-sq/strings.xml
@@ -9,4 +9,48 @@ to the public domain.
 You should have received a copy of the CC0 legalcode along with this
 work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
 -->
-<resources xmlns:tools="http://schemas.android.com/tools"></resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <string name="settings">Parametrat</string>
+    <string name="appearance">Pamja</string>
+    <string name="editor">Redaktori</string>
+    <string name="about">Rreth</string>
+    <string name="create">Krijo</string>
+    <string name="hide_statusbar">Fshih shiritin e statusit</string>
+    <string name="contributors">Kontribuesit</string>
+    <string name="licenses">Licensa</string>
+    <string name="changelog">Ndryshim</string>
+    <string name="show_license_of_the_app">Shfaq licencën e aplikacionit</string>
+    <string name="show_third_party_licenses">Shfaq licencat e palës së tretë</string>
+    <string name="language_change_restart_description">Ndrysho gjuhën e këtij aplikacioni. Rinisni aplikacionin që ndryshimet të hyjnë në fuqi</string>
+    <string name="language">Gjuha</string>
+    <string name="size">Madhësia</string>
+    <string name="contribute">Kontribuoj</string>
+    <string name="donate">Dhuroni</string>
+    <string name="exit">Dil</string>
+    <string name="more">Më tepër</string>
+    <string name="help">Ndihmë</string>
+    <string name="main_view">Pamja kryesore</string>
+    <string name="other">TJERA</string>
+    <string name="general">Gjeneral</string>
+    <string name="open_source_licenses">Licencat me burim të hapur</string>
+    <string name="rate_this_app">Vlerëso këtë aplikacion</string>
+    <string name="translate">Përkthimet</string>
+    <string name="more_info_and_help">Më shumë informacion dhe ndihmë</string>
+    <string name="report_bugs">Raportoni gabimet</string>
+    <string name="join_community">Bashkohu komunitetit</string>
+    <string name="bug_reports_suggest_improvements">Jepni komente, raportoni gabime ose sugjeroni përmirësime</string>
+    <string name="help_translating_this_app">Përkthejeni këtë aplikacion në gjuhë të tjera</string>
+    <string name="source_code">Kodi burimor</string>
+    <string name="project_license">Licenca e projektit</string>
+    <string name="contribute_code_to_this_project_anybody_welcome">Kontribuoni kodin në projekt. Të gjithë janë të mirëpritur ta bëjnë këtë, përfshirë të sapoardhurit</string>
+    <string name="project_team">Ekipi i projektit</string>
+    <string name="contributors_public_add_yourself_description">Shfaq informacionin e kontribuesit. Siguroni që të shfaqet këtu në bazë të zgjedhjes pasi të kontribuoni</string>
+    <string name="error_picture_selection">Asnjë foto nuk është zgjedhur, marrë apo ruajtur.</string>
+    <string name="edit_picture">Redakto foton</string>
+    <string name="miscellaneous">Të ndryshme</string>
+    <string name="background">Sfondi</string>
+    <string name="font">Shkronja</string>
+    <string name="close">Mbyll</string>
+    <string name="favourite">Të preferuarat</string>
+    <string name="rotate">Rrotullo</string>
+</resources>
