--- a/app/src/main/res/values-sr/strings.xml
+++ b/app/src/main/res/values-sr/strings.xml
@@ -25,21 +25,45 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="about">О програму</string>
     <string name="image">Слика</string>
     <string name="create">Napravi</string>
+    <string name="hide_statusbar">Сакриј статусну траку</string>
     <string name="contributors">Сарадници</string>
     <string name="licenses">Licence</string>
     <string name="changelog">Дневник измена</string>
+    <string name="show_license_of_the_app">Покажите лиценцу апликације</string>
     <string name="show_third_party_licenses">Прикажи лиценце треће стране</string>
     <string name="language_change_restart_description">Промените језик апликације. Поново покрените након тога</string>
     <string name="language">Језик</string>
     <string name="size">Veličina</string>
+    <string name="contribute">Допринеси</string>
     <string name="donate">Doniraj</string>
     <string name="exit">Izadji</string>
     <string name="more">још</string>
+    <string name="help">Помоћ</string>
+    <string name="main_view">Главни поглед</string>
     <string name="none">нема</string>
     <string name="other">Drugo</string>
+    <string name="general">Опште</string>
+    <string name="open_source_licenses">Лиценце отвореног кода</string>
+    <string name="rate_this_app">Оцени апликацију</string>
     <string name="translate">Преводите</string>
+    <string name="more_info_and_help">Више информација и помоћи</string>
+    <string name="report_bugs">Пријави багове</string>
+    <string name="join_community">Придружи се заједници</string>
+    <string name="bug_reports_suggest_improvements">Дајте повратне информације, пријавите грешке или предложите побољшања</string>
+    <string name="help_translating_this_app">Преведи ову апликацију на друге језике</string>
+    <string name="source_code">Изворни код</string>
+    <string name="project_license">Пројектна лиценца</string>
+    <string name="contribute_code_to_this_project_anybody_welcome">Допринос кода пројекту. Сви су добродошли на то, укључујући и придошлице</string>
+    <string name="project_team">Пројектни тим</string>
+    <string name="contributors_public_add_yourself_description">Покажите информације о сараднику. Омогућите да се овде прикаже на бази за пријаву након доприноса</string>
     <string name="location">Локација</string>
     <string name="error_picture_selection">Nijedna slika nije oznacena.</string>
     <string name="description">Опис</string>
+    <string name="edit_picture">Измените слику</string>
     <string name="miscellaneous">разно</string>
+    <string name="background">Позадина</string>
+    <string name="font">Фонт</string>
+    <string name="close">Затвори</string>
+    <string name="favourite">Омиљени</string>
+    <string name="rotate">Окретање</string>
 </resources>
