--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -57,6 +57,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="render_rtl_language">תייצג עבור שפות ימין-לשמאל</string>
     <string name="error_cannot_create_notebook_dir__appspecific">שגיאה: לא ניתן ליצור תיקיה</string>
     <string name="last_modified_witharg">עדכון אחרון: %s</string>
+    <string name="last_modified">Last updated</string>
     <string name="select_this_folder">בחר תיקיה זו</string>
     <string name="select">בחר</string>
     <string name="create">צור</string>
@@ -312,6 +313,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="recursive_search_in_current_directory">חיפוש ריקורסיבי בתיקיה נוכחית.</string>
     <string name="always_open_with_this_app">פתח תמיד עם אפליקציה זו</string>
     <string name="always_open_files_with_this_app_when_list_contains_file_extension">תמיד פתח קבצים באפליקציה זו כאשר הרשימה מכילה את סיומת הקובץ. השתמשו לדוגמא ב \'None, .html, .css , .js\' אם ברצונכם לערוך קבצי web וכאלו ללא סיומת.</string>
+    <string name="rotate">לסובב</string>
     <string name="template">תבנית</string>
     <string name="send_debug_log">שליחה לוג לפטרון בעיות</string>
     <string name="print_pdf">הדפסה / PDF</string>
